--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans');
+
 
 body{
-	font-family: 'Noto Sans', 'sans-serif';
+	font-family: "Noto Sans Japanese";
 	font-weight: 200;
-	margin: auto;
+	margin: 0 auto;
 	width: 100%;
 	min-width: 1024px;
+	background-color: #1E90FF;
 
 
 }
@@ -23,10 +24,12 @@ a{
 
 #menu{
 	top: 0;
-	margin: 0;
+	margin: 0 auto;
+	font-weight: 150;
 	width: 100%;
 	height: 50px;
 	min-width: 960px;
+	max-width: 1350px;
 	background-color: #1E90FF;
 	z-index: 999;
 }
@@ -59,7 +62,7 @@ a{
 /*== pタグ周り ==*/
 .title{
 	font-size: 30px;
-	font-family: 'Noto Sans Japanese';
+	font-weight: 300;
 	line-height: 1.5em;
 }
 
@@ -73,14 +76,12 @@ a{
 	padding-bottom: 1%;
 	text-align: left;
 	font-size: 18px;
-	font-family: 'Noto Sans Japanese','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ','Meiryo','ＭＳ Ｐゴシック',sans-serif;
 }
 
 .center{
 	padding-bottom: 1%;
 	text-align: center;
 	font-size: 18px;
-	font-family: 'Noto Sans Japanese','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ','Meiryo','ＭＳ Ｐゴシック',sans-serif;
 }
 
 #title{
@@ -91,25 +92,14 @@ a{
 /*== 共通容器 ==*/
 #container{
 	margin: 0 auto;
-	width: 80%;
-	height: 100%;
-}
-
-#index-container{
-	margin: 0 auto;
 	width: 100%;
 	height: 100%;
+	background-color: white;
 }
 
-#container-plus{
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 50px;
-	width: 100%;
-}
 /*== 共通要素 ==*/
 .pageTitle{
-	margin-top:	75px;
+	padding-top: 75px;
 }
 
 .headerLogo{
@@ -128,7 +118,7 @@ a{
 }
 
 .nonImg{
-	margin-top: 10%;
+	padding-top: 15%;
 }
 
 .individual{
@@ -225,7 +215,8 @@ a{
 
 /*== about ==*/
 #about{
-	width: 100%;
+	margin: 0 auto;
+	width: 80%;
 	border-radius: 20px;
 	background-color: #EEEEEE;
 }
@@ -375,7 +366,8 @@ table.nextDojoTable th:after {
 /*== rtd ==*/
 
 #rtd{
-	width: 100%;
+	margin: 0 auto;
+	width: 80%;
 	border-radius: 20px;
 	background-color: #EEEEEE;
 }
@@ -434,7 +426,8 @@ table.nextDojoTable th:after {
 /*== mentor ==*/
 
 #mentor{
-	width: 100%;
+	margin: 0 auto;
+	width: 80%;
 }
 
 .aboutMentor{
@@ -456,7 +449,7 @@ table.nextDojoTable th:after {
 }
 
 #mentorList{
-	width: 100%;
+	width: 80%;
 	margin: 0 auto;
 }
 
@@ -551,6 +544,10 @@ table.nextDojoTable th:after {
 
 /*== adopt ==*/
 #adopt{
+	margin: 0 auto;
+	width: 80%;
+	border-radius: 20px;
+	background-color: #EEEEEE;
 
 }
 
@@ -579,6 +576,8 @@ table.nextDojoTable th:after {
 /*== event ==*/
 
 #event{
+	margin: 0 auto;
+	width: 80%;
 }
 
 .events{
@@ -668,7 +667,9 @@ table.nextDojoTable th:after {
 /*== footer ==*/
 #footer{
 	width: 100%;
-	background-color: rgba(30,144,255,0.5);
+	margin: 0 auto;
+	max-width: 1350px;
+	background-color: #1E90FF;
 	color: white;
 }
 
@@ -770,6 +771,9 @@ table.nextDojoTable th:after {
 /*== sponsor ==*/
 
 #sponsor{
+	margin: 0 auto;
+	width: 80%;
+
 }
 
 .sponsor-list{
@@ -849,7 +853,7 @@ table.nextDojoTable th:after {
 	color: red;
 }
 
-/*== sns ==*/
+/*== sns 
 #sns{
 	width: 100%;
 	text-align: center;
@@ -868,6 +872,7 @@ table.nextDojoTable th:after {
 	margin-bottom: 2%;
 	width: 10%;
 }
+==*/
 
 /*== founder ==*/
 #founder{
@@ -880,7 +885,7 @@ table.nextDojoTable th:after {
 }
 
 .mjkPro{
-	margin: 1% 0;
+	margin: 1% 20%;
 }
 
 .position{
@@ -895,6 +900,10 @@ table.nextDojoTable th:after {
 .founderImage img{
 	width: 25%;
 	border-radius: 50%;
+}
+
+.nameLabel{
+	margin-left: 10%;
 }
 
 .founderName{
@@ -1063,7 +1072,7 @@ table{
 }
 /* dojo */
 
-.dojo-list{
+.Kdojo-list{
 	margin: 5% 0;
 	width: 100%;
 	border-radius: 20px;
@@ -1071,7 +1080,7 @@ table{
 	flex-wrap: wrap;
 }
 
-.dojo-list article{
+.Kdojo-list article{
 	margin: 1.5% auto;
 	padding: 1.0%;
 	width: 45%;
@@ -1096,7 +1105,8 @@ table{
 }
 
 .kashiwadojo{
-	height: 250px; 
+	margin-top: 50px;
+	height: 200px; 
 }
 
 .kashiwanohadojo{
@@ -1104,5 +1114,6 @@ table{
 }
 
 .nagareyamadojo{
-	height: 250px;
+	margin-top: 50px;
+	height: 200px;
 }
