--- a/member/style/style.css
+++ b/member/style/style.css
@@ -6,6 +6,7 @@ body{
 	color: black;
 	top: 0;
 	left: 0;
+	width: 100%;
 
 }
 
@@ -51,12 +52,14 @@ a{
 	color: white;
 }
 
-
-
-
 #main{
-	width: 80%;
-	margin: 350px 10% 0 10%;
+	width: 100%;
+	left: 0;
+	/*
+	margin-left: 10%;
+	margin-right: 10%;
+	*/
+	margin-top: 350px;
 	height: auto;
 }
 
@@ -99,12 +102,16 @@ a{
 	padding:10px;
 	font-size:1.3em;
 	font-family:Arial, sans-serif;
-	color:#aaa;
+	color:black;
 	border:solid 1px #ccc;
 	margin:0 0 20px;
 	width:300px;
 	text-align: center;
 
+}
+
+.dateBox{
+	text-align: center;
 }
 
 #newRegesiter{
@@ -117,133 +124,13 @@ a{
 	text-align: center;
 }
 
-
-/*
-
-#lost{
-	width: 45%;
-	margin-left: 2.5%;
-	background-color: gray;
-	float: left;
-	margin-bottom: 100px;
-}
-
-#lost:hover{
-	background-color:RGB(30, 144, 255)
-}
-
-#message{
-	width: 45%;
-	margin-left: 5%;
-	margin-right: 2.5%;
-	margin-bottom: 100px;
-	background-color: gray;
-	float: left;
-
-}
-
-#message:hover{
-	background-color:RGB(30, 144, 255)
-}
-
-#code{
-	width: 45%;
-	margin-left: 2.5%;
-	margin-bottom: 100px;
-	background-color: gray;
-	float: left;
-}
-
-#code:hover{
-	background-color:RGB(30, 144, 255)
-}
-
-#file{
-	width: 45%;
-	margin-left: 5%;
-	margin-right: 2.5%;
-	margin-bottom: 100px;
-	background-color: gray;
-	float: left;
-
-}
-
-#file:hover{
-	background-color:RGB(30, 144, 255)
-}
-
-
-
-
-.contentsLink{
-	display: block;
-	width: 100%;
-	height: 100%;
-	text-decoration: none;
-	color: white;
-}
-
-#lostTable table{
-	width: 100%;
-	text-align: center;
-	border-collapse: collapse;
-}
-
-.lostTd1{
-	width: 10%;
-}
-
-.lostTd2{
-	width: 30%;
-}
-
-.lostTd3{
-	width: 20%;
-}
-
-.lostTd4{
-	width: 40%;
-}
-
-#messageTable table{
-	width: 100%;
-	text-align: center;
-	border-collapse: collapse;
-}
-
-.messageTd1{
-	width:5%; 
-}
-
-.messageTd2{
-	width: 10%;
-}
-
-.messageTd3{
-	width: 65%;
-}
-
-.messageTd4{
-	width: 20%;
-}
-
-#fileTable table{
-	width: 100%;
-	text-align: center;
-	border-collapse: collapse;
-}
-
-.fileTd1{
-	width: 15%;
-}
-
-.fileTd2{
-	width: 35%;
-}
-
-.fileTd3{
+.checkTable{
 	width: 50%;
+	margin-left: 25%;
+	margin-right: 25%;
+	font-size: 20px;
 }
 
-*/
-
+.tdLeft{
+	text-align: right;
+}
