2017年度版のスケジュールに更新 PDF版でもダウンロード可能にした。

--- a/schedule/style/style.css
+++ b/schedule/style/style.css
@@ -24,6 +24,11 @@ img{
 	width: 50%;
 }
 
+a{
+	color: #1E90FF;
+	text-decoration: none;
+}
+
 /*== head要素 ==*/
 
 #header{
@@ -60,6 +65,7 @@ img{
 }
 
 .caution{
+	padding-bottom: 2%;
 	color: red;
 }
 
