--- a/event/ScratchDay/2017/style/style.css
+++ b/event/ScratchDay/2017/style/style.css
@@ -92,7 +92,7 @@ nav{
 }
 
 #contents{
-	margin: 0 20%;
+	margin: 0 15%;
 	height: auto;
 
 }
@@ -122,13 +122,23 @@ nav{
 }
 
 .eventContents{
-	margin: 10% 0;
+	margin: 5% 0;
 	background-color: rgba(200,100,0,0.5);
 	border-radius: 20px;
 }
 
+.programs{
+display: flex;
+flex-wrap: wrap;
+padding: 3%;
+}
+
 .event{
-	margin: 5%
+	margin: 5% auto;
+	padding: 2%;
+	width: 325px;
+	background-color: RGB(247, 175, 39);
+	border-radius: 20px;
 }
 
 .event-text{
@@ -199,6 +209,7 @@ nav{
 }
 
 .random{
+	padding: 2%;
 	font-size: 10px;
 }
 
