--- a/event/ScratchDay/2017/style/style.css
+++ b/event/ScratchDay/2017/style/style.css
@@ -10,7 +10,7 @@ html,body{
 
 a{
 	color: white;
-	
+	text-decoration: none;
 }
 
 nav{
@@ -18,6 +18,10 @@ nav{
 	padding: 0;
 	font-size: 15px;
 	color: white;
+}
+
+.center{
+	text-align: center;
 }
 
 .headerImg{
@@ -164,7 +168,7 @@ nav{
 
 
 .eventContents{
-	margin: 5% 0;
+	margin: 10% 0;
 	background-color: rgba(200,100,0,0.5);
 	border-radius: 20px;
 }
@@ -282,6 +286,7 @@ padding: 3%;
 	margin: 3% 0;
 	padding: 0;
 	font-size: 22px;
+	color: white;
 }
 
 .random{
@@ -313,5 +318,54 @@ padding: 3%;
 .eventTitle{
 	text-align: center;
 	color: white;
+}
+
+.contentsTitle{
+	font-size: 24px;
+	color: white;
+}
+
+.contentsText{
+	font-size: 18px;
+	color: white;
+}
+
+#eventDetail{
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+.eventTable{
+	width: 100%;
+	border-collapse: collapse;
+}
+
+tr{
+	border-color: white;
+}
+
+.tdLeft{
+	border-color: white;
+	width: 30%;
+	text-align: center;
+	font-size: 20px;
+	color: white;
+}
+
+.tdRight{
+	border-color: white;
+	width: 70%;
+	color: white;
+	font-size: 18px;
+}
+
+.tsProfileImage{
+	width: 100%;
+	display: block;
+	border-radius: 50%;
+	text-align: center;
+	margin-left: 0;
+	margin-right: 0;
 }
 
