メインページの変更

--- a/style/style.css
+++ b/style/style.css
@@ -165,6 +165,26 @@ a{
 	position: absolute;
 }
 
+.slideInnerLow{
+	width: 50%;
+	margin: auto;
+	padding-top: 28%; 
+	top: 30px;
+	left: 0;
+	right: 0;
+	position: absolute;
+}
+
+.slideInnerLow{
+	width: 50%;
+	margin: auto;
+	padding-top: 28%; 
+	top: 30px;
+	left: 0;
+	right: 0;
+	position: absolute;
+}
+
 .slideInnerPlus{
 	width: 20%;
 	margin: auto;
@@ -639,8 +659,13 @@ table.nextDojoTable th:after {
 	text-align: center;
 }
 
+.sdk2017{
+	margin: 0 auto;
+	width: 80%;
+}
+
 .spd2016{
-	height: 400px;
+	height: 250px;
 }
 
 .sdk2016{
