--- a/event/ScratchDay/2017/style/style.css
+++ b/event/ScratchDay/2017/style/style.css
@@ -246,19 +246,11 @@ padding: 3%;
 	margin: 10% 0;
 	background-color: rgba(200,100,0,0.5); 
 	border-radius: 20px;
+	text-align: center;
 }
 
-.mapImg{
-	padding: 1% 0;
-	width: 100%; 
-}
-
-.gMaps{
-	margin: 1% auto;
-	width: 80%;
-	height: 400px;
-	border: 0;
-	display: block;
+#egmap_canvas_1{
+	margin: 5% auto;
 }
 
 .videoContents{
