--- a/event/ScratchDay/2017/style/style.css
+++ b/event/ScratchDay/2017/style/style.css
@@ -270,6 +270,14 @@ padding: 3%;
 	margin: 1% 0;
 }
 
+/*== TimeTable ==*/
+#timetable{
+	text-align: center;
+}
+tr{
+	height: 22px;
+}
+
 .sponsorContents{
 	background-color: rgba(200,100,0,0.5);
 	border-radius: 20px;
