dojo/kashwiaページを追加, dojo/以下のディレクトリを追加

--- a/style/style.css
+++ b/style/style.css
@@ -99,11 +99,12 @@ a{
 
 /*== 共通要素 ==*/
 .pageTitle{
-	padding-top: 75px;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
 .headerLogo{
-	top: 100px;
+	top: 10px;
 	width: 10%;
 	display: block;
 	text-align: center;
