各Dojoの紹介ページのバグを修正

--- a/dojo/style/dojoDetail.css
+++ b/dojo/style/dojoDetail.css
@@ -1,16 +1,16 @@
 #dojoDetail{
     margin: 0 auto;
+    padding: 1%;
 	width: 80%;
-    height: 500px;
     background-color: RGB(244, 244, 244);
     border-radius: 10px;
     margin-bottom: 20px;
+    display: flex;
+	flex-wrap: wrap;
 }
 
 #dojoDetailDescriptionTextArea{
     width: 35%;
-    float: left;
-    height: 400px;
     margin-left: 2.5%;
     margin-right: 2.5%;
 }
@@ -25,9 +25,8 @@
 }
 
 #dojoDetailImageArea{
+    margin: auto;
     width: 60%;
-    height: 400px;
-    float: left;
 }
 
 .dojoDetailImage{
@@ -45,9 +44,10 @@
 }
 
 .dojoDetailSkillScratch{
-    background-color: RGB(239, 159, 40);
+    margin: 1px;
     width: 100px;
     height: 25px;
+    background-color: RGB(239, 159, 40);
     text-align: center;
     border-radius: 8px;
     display: inline-block;
@@ -55,6 +55,7 @@
 }
 
 .dojoDetailSkillWeb{
+    margin: 1px;
     width: 100px;
     text-align: center;
     height: 25px;
@@ -64,6 +65,7 @@
 }
 
 .dojoDetailSkillDesign{
+    margin: 1px;
     width: 100px;
     text-align: center;
     height: 25px;
@@ -73,6 +75,7 @@
 }
 
 .dojoDetailSkillRaspi{
+    margin: 1px;
     width: 100px;
     text-align: center;
     height: 25px;
