--- a/style/style.css
+++ b/style/style.css
@@ -1114,7 +1114,7 @@ table{
 .Kdojo-list article{
 	margin: 1.5% auto;
 	padding: 0.5% 0;
-	width: 22.5%;
+	width: 25.5%;
 	border: 3px solid #EEEEEE;
 	border-radius: 15px;
 	text-align: center;
@@ -1145,6 +1145,7 @@ table{
 
 .kashiwadojo{
 	margin-top: 50px;
+	margin-bottom: 14%;
 	height: 150px; 
 }
 
