--- a/style/style.css
+++ b/style/style.css
@@ -1381,3 +1381,17 @@ table{
 	margin-left: 40%;
 	margin-right: 40%;
 }
+
+/* about */
+
+#aboutImageArea{
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+.aboutText{
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+}
