--- a/style/style.css
+++ b/style/style.css
@@ -1425,3 +1425,20 @@ table{
 .nfLink{
 	text-align: center;
 }
+
+.button{
+	display: block;
+	width: 20%;
+    padding: 0.3em 1em;
+    text-decoration: none;
+    color: #67c5ff;
+    border: solid 2px #67c5ff;
+    border-radius: 3px;
+	transition: .4s;
+	margin: 0 auto;
+	text-align: center;
+}
+
+#formCheck{
+	margin-bottom: 100px;
+}
