--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@ body{
 	font-weight: 200;
 	margin: 0 auto;
 	width: 100%;
-	min-width: 1024px;
+	min-width: 1060px;
 	background-color: #1E90FF;
 
 
@@ -28,8 +28,6 @@ a{
 	font-weight: 150;
 	width: 100%;
 	height: 50px;
-	min-width: 960px;
-	max-width: 1350px;
 	background-color: #1E90FF;
 	z-index: 999;
 }
@@ -203,21 +201,18 @@ a{
 
 .subContents{
 	display: flex;
+	flex-wrap: wrap;
 }
 
+
 .inner{
-	margin: 0 2%;
-	padding: 0;
-	width: 30%;
+	margin: 2%;
 	border: 2px solid #999;
 	border-radius: 15px;
 	text-align: center;
+	flex-grow: 1;
 }
 
-.inner div{
-	height: 275px;
-	position: relative;
-}
 
 .inner p{
 	margin: 0;
@@ -225,13 +220,20 @@ a{
 	font-size: 1.4em;
 }
 
-#sub img{
-	margin: auto;
-	left: 0;
-	right: 0;
-	height: 65%;
-	bottom: 5%;
-	position: absolute;
+.inner img{
+	height: 170px;
+}
+
+#schedule{
+	
+}
+
+#nearDojo{
+	
+}
+
+#spd{
+	background: linear-gradient(#84d7f3, #ef4b85);
 }
 
 /*== about ==*/
@@ -694,7 +696,6 @@ table.nextDojoTable th:after {
 #footer{
 	width: 100%;
 	margin: 0 auto;
-	max-width: 1350px;
 	background-color: #1E90FF;
 	color: white;
 }
