--- a/schedule/style/style.css
+++ b/schedule/style/style.css
@@ -4,79 +4,10 @@ body{
 	width: 100%;
 	font-family: 'Noto Sans Japanese';
 	font-weight: 200;
-	text-align: center;
 }
 
-table{
-	width: 80%;
+#schedule iframe{
+	display: block;
 	margin: 0 auto;
-}
-
-tr{
-	height: 80px;
-}
-
-td{
-	font-size: 20px;
-}
-
-img{
-	width: 50%;
-}
-
-a{
-	color: #1E90FF;
-	text-decoration: none;
-}
-
-/*== head要素 ==*/
-
-#header{
-}
-
-.header{
-	font-size: 1.8em;
-}
-
-
-/*== main要素 ==*/
-
-#main{
-}
-
-#head{
-	height: 100%;
-}
-.imgLogo{
-	margin-top: 1%;
-}
-
-.detainls{
-	font-size: 16px;
-}
-
-.month{
-}
-
-.kashiwa{
-}
-
-.kashiwanoha{
-}
-
-.caution{
-	padding-bottom: 2%;
-	color: red;
-}
-
-/*== footer要素 ==*/
-#footer{
-	margin: 0 auto;
-	width: 80%;
-}
-
-.calendar{
-	width: 80%;
-	margin-left: 10%;
-	margin-right: 10%;
+	margin-bottom: 1%;
 }
