--- a/event/spd/2017/style/flexslider.css
+++ b/event/spd/2017/style/flexslider.css
@@ -73,8 +73,8 @@ html[xmlns] .flexslider .slides {
  * DEFAULT THEME
  * ====================================================================================================================*/
 .flexslider {
-  margin: 0 0 60px;
-  background: #fff;
+  margin: 0 10%;
+  margin-bottom: 60px;
   border: 4px solid #fff;
   position: relative;
   zoom: 1;
