--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,7 @@
 body{
 	font-family: "Noto Sans Japanese";
 	font-weight: 200;
+	letter-spacing: 0.05em;
 	margin: 0 auto;
 	width: 100%;
 	min-width: 1060px;
@@ -243,6 +244,7 @@ a{
 /*== about ==*/
 #about{
 	margin: 0 auto;
+	padding: 5% 0;
 	width: 80%;
 	border-radius: 10px;
 	background-color: #EEEEEE;
@@ -601,6 +603,8 @@ table.nextDojoTable th:after {
 }
 
 #footer a{
+	font-size: 1.2em;
+	font-weight: 50px;
 	color: white;
 }
 
@@ -687,7 +691,7 @@ table.nextDojoTable th:after {
 }
 
 #aux{
-	font-size: 12px;
+	font-size: 0.7em;
 
 }
 
@@ -1250,6 +1254,11 @@ table{
 	background-color: RGB(238, 238, 238);
 	border-radius: 15px;
 	
+}
+
+#mentor .btn{
+	background: #1E90FF;
+	color: white;
 }
 
 #mentorImageArea{
