--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,6 @@ body{
 	letter-spacing: 0.05em;
 	margin: 0 auto;
 	width: 100%;
-	min-width: 1060px;
 	background-color: #1E90FF;
 
 
@@ -24,44 +23,25 @@ p{
 	color: #000;
 }
 
-/*== MENU ==*/
-
+/*== navbar ==*/
 #menu{
-	top: 0;
-	margin: 0 auto;
-	font-weight: 150;
-	width: 100%;
-	height: 50px;
 	background-color: #1E90FF;
-	z-index: 999;
-	line-height:  !important;
-}
-
-#menu ul{
-	margin: 0;
-	list-style: none;
-	display: flex;
-	justify-content: space-around;
-}
-
-
-#menu li{
-	margin-top: 0.75%;
-	flex: auto; 
-	text-align: center;
-}
-
-#menu a{
-	font-size: 20px;
-	font-weight: 100px;
-	color: white;
 }
 
 .homeLogo{
+	margin: 0 50%;
 	width: 35px;
 	height: auto;
 }
 
+#navbar li{
+	margin: auto;
+}
+
+#navbar a{
+	font-size: 1.15em;
+	color: white;
+}
 /*== pタグ周り ==*/
 .title{
 	margin-top: 5%;
